# cutible

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cutible/: __init__.py  cli.py  compiler.py  mcp_server.py  qc.py  schema.py  verbs.py  verbs_high.py
cutible/agents/: __init__.py  base.py  editor.py  llm_client.py  orchestrator.py  planner.py  qc_agent.py  sound.py
cutible/api/: __init__.py  app.py
cutible/index/: __init__.py  models.py  search.py  store.py
cutible/ingest/: __init__.py  audio_analysis.py  audio_transcribe.py  diarization.py  embeddings.py  pipeline.py  scenes.py  vlm.py
cutible/otio_bridge/: __init__.py  exporter.py  importer.py
cutible/perception/: __init__.py  proxy_render.py  vlm_review.py
cutible/remotion/: __init__.py  compiler.py
cutible/render_farm/: __init__.py  manager.py  remote.py  scheduler.py  worker.py
cutible/sdk/: __init__.py  client.py
examples/: agent_recap_demo.py  make_assets.sh
examples/assets/: music.m4a
sdk_ts/: README.md  package.json
sdk_ts/src/: client.ts  index.ts  types.ts
sdk_ts/src/__tests__/: client.test.ts
tests/: test_core.py  test_new_modules.py
