[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cutible"
version = "1.0.0"
description = "Agent-native montage engine: Timeline-as-Data, verb API, deterministic FFmpeg render, QC loop, MCP server, ingest pipeline, multi-agent swarm, VLM perception, Remotion, OTIO bridge, render farm, REST API, SDK."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cutible Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
]
keywords = ["video", "editing", "montage", "agent", "timeline", "ffmpeg", "mcp"]
dependencies = ["pydantic>=2.0", "python-dotenv>=1.0"]

[project.urls]
Homepage = "https://github.com/cutible/cutible"
Documentation = "https://github.com/cutible/cutible#readme"
Repository = "https://github.com/cutible/cutible"
Issues = "https://github.com/cutible/cutible/issues"

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.20", "slowapi>=0.1.8"]
whisper = ["faster-whisper>=0.10"]
vlm = ["google-generativeai>=0.3"]
embeddings = ["torch>=2.0", "ftfy", "regex", "clip @ git+https://github.com/openai/CLIP.git"]
diarization = ["pyannote.audio>=3.1"]
otio = ["opentimelineio>=0.15"]
all = ["cutible[api,whisper,vlm,embeddings,diarization,otio]"]
dev = [
    "pytest>=7",
    "fastapi>=0.100",
    "httpx>=0.24",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
cutible = "cutible.cli:main"
cutible-mcp = "cutible.mcp_server:serve"
cutible-api = "cutible.cli:serve_api"

[tool.setuptools.packages.find]
include = ["cutible*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",     # line length handled by ruff format
    "N806",     # uppercase variables (W, H, FPS) are intentional
    "SIM102",   # nested ifs are clearer in validators
    "SIM108",   # ternary not always more readable
    "SIM115",   # tempfile.NamedTemporaryFile pattern is intentional
    "B905",     # zip strict= not needed here
]
[tool.ruff.lint.per-file-ignores]
"cutible/ingest/embeddings.py" = ["F401"]
"cutible/render_farm/remote.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
